# joj_engine

./: .gitignore  CMakeLists.txt  README.md
Joj/: CMakeLists.txt  Joj.h  app_d3d11.cpp  app_d3d11.h  cube.cpp  cube.h  curves.cpp  curves.h  gl_app.cpp  gl_app.h  main.cpp  my_game.cpp  my_game.h  quad_d3d11.cpp  quad_d3d11.h  shapes.cpp  shapes.h  triangle_d3d11.cpp  triangle_d3d11.h  vertex.hlsl
engine/: CMakeLists.txt  defines.h  engine.cpp  engine.h  error.cpp  error.h  error_list.cpp  error_list.h  fmath.h  game.cpp  game.h  logger.cpp  logger.h
graphics/: CMakeLists.txt  context.cpp  context.h  graphics_context.cpp  graphics_context.h  graphics_dx11.cpp  graphics_dx11.h  graphics_dx12.cpp  graphics_dx12.h
graphics/dx11/: CMakeLists.txt  context_dx11.cpp  context_dx11.h  graphics_dx11.cpp  graphics_dx11.h
graphics/dx12/: CMakeLists.txt  context_dx12.cpp  context_dx12.h  graphics_dx12.cpp  graphics_dx12.h
graphics/opengl/: CMakeLists.txt  context_gl.cpp  context_gl.h  graphics_gl.cpp  graphics_gl.h  graphics_glold.cpp  graphics_glold.h  joj_gl.cpp  joj_gl.h
graphics/opengl/KHR/: CMakeLists.txt
joj/: CMakeLists.txt  gl_app.cpp  gl_app.h
new_Joj/: VertexShader.hlsl  gl_app.h  shapes.h
platform/: CMakeLists.txt  input.h  input_win32.cpp  input_win32.h  platform_manager.cpp  platform_manager.h  timer_win32.cpp  timer_win32.h  window.h  window_win32.cpp  window_win32.h
platform/win32/: CMakeLists.txt  input.cpp  input.h  timer.cpp  timer.h  window.cpp  window.h
renderer/: CMakeLists.txt  geometry.cpp  geometry.h  renderer.cpp  renderer.h  renderer_dx11.cpp  renderer_dx11.h  renderer_dx12.cpp  renderer_dx12.h
renderer/dx11/: CMakeLists.txt  renderer_dx11.cpp  renderer_dx11.h
renderer/dx12/: CMakeLists.txt  renderer_dx12.cpp  renderer_dx12.h  renderer_dx12old.cpp  renderer_dx12old.h
renderer/opengl/: CMakeLists.txt  camera.cpp  camera.h  oldcamera.cpp  oldcamera.h  renderer_gl.cpp  renderer_gl.h  shader.cpp  shader.h
